--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
 
 before_script:
   - apt-get update
-  - apt-get install -y --force-yes openjdk-8-jdk scala 
+  - apt-get install -y --force-yes --no-install-recommends openjdk-8-jdk scala 
 
 build:
   stage: build
