Move from GitLab to GitHub

--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ repositories {
     }
     maven {
         name = "harvestmoon"
-        url = "https://gitlab.com/harvestmoon/maven/raw/master/"
+        url = "https://github.com/HarvestMoon/Maven/raw/master/"
     }
 }
 
