--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
 
 after_success:
-  - git checkout https://github.com/HarvestMoon/CIBuilds.git ~/hmdeploy
+  - git clone https://github.com/HarvestMoon/CIBuilds.git ~/hmdeploy
   - ~/hmdeploy/deploy.sh
 
 cache:
