Disable gradle check for now, since we don't have unit tests
[ci skip]

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ sudo: false
 install: true
 script:
   - ./gradlew build
-  - ./gradlew check
+#  - ./gradlew check
 
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
